Creazione metodi EventCard per risoluzione carte